--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <section>
         <div class="leaves">
             <div class="set">
-                <div><img src="leaf_01.png" alt="Leaf 01"></div>
-                <div><img src="leaf_02.png" alt="Leaf 02"></div>
-                <div><img src="leaf_03.png" alt="Leaf 03"></div>
-                <div><img src="leaf_04.png" alt="Leaf 04"></div>
-                <div><img src="leaf_01.png" alt="Leaf 01"></div>
-                <div><img src="leaf_02.png" alt="Leaf 02"></div>
-                <div><img src="leaf_03.png" alt="Leaf 03"></div>
-                <div><img src="leaf_04.png" alt="Leaf 04"></div>   
+                <div><img src="img/leaf_01.png" alt="Leaf 01"></div>
+                <div><img src="img/leaf_02.png" alt="Leaf 02"></div>
+                <div><img src="img/leaf_03.png" alt="Leaf 03"></div>
+                <div><img src="img/leaf_04.png" alt="Leaf 04"></div>
+                <div><img src="img/leaf_01.png" alt="Leaf 01"></div>
+                <div><img src="img/leaf_02.png" alt="Leaf 02"></div>
+                <div><img src="img/leaf_03.png" alt="Leaf 03"></div>
+                <div><img src="img/leaf_04.png" alt="Leaf 04"></div>   
             </div>
         </div>
-        <img src="bg.jpg" alt="Background Image" class="bg">
-        <img src="girl.png" alt="Girl Image" class="girl">
-        <img src="trees" alt="Trees Image" class="trees">
+        <img src="img/bg.jpg" alt="Background Image" class="bg">
+        <img src="img/girl.png" alt="Girl Image" class="girl">
+        <img src="img/trees" alt="Trees Image" class="trees">
         <div class="login">
             <h2>Sign in</h2>
             <div class="inputBox">
