--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <img src="img/bg.jpg" alt="Background Image" class="bg">
         <img src="img/girl.png" alt="Girl Image" class="girl">
-        <img src="img/trees" alt="Trees Image" class="trees">
+        <img src="img/trees.png" alt="Trees Image" class="trees">
         <div class="login">
             <h2>Sign in</h2>
             <div class="inputBox">
